--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ FLASK_ENV = 'development'
 SECRET_KEY = 'Ji_aZsqanOyc9oZfS4O0Lcn1nZjDpam7Y-sjRwIQGFo'
 TESTING = False
 WTF_CSRF_SECRET_KEY = 'kkDOqvG1irPfZrhxcUVp9NfkNSPkhNm7EQQQb6rKkDg'
+SQLALCHEMY_DATABASE_URI = 'sqlite:///movies.db'
